--- a/backend/packages/Upgrade/.env.example
+++ b/backend/packages/Upgrade/.env.example
@@ -54,7 +54,9 @@ SWAGGER_API=**/controllers/*.ts
 SWAGGER_JSON=/swagger.json
 
 #
-# Google Client Id
+# Google Authentication Configuration
+# Note: GOOGLE_CLIENT_ID and GOOGLE_SERVICE_ACCOUNT_ID can be a single ID or multiple comma-separated IDs (no spaces)
+# Example: id1,id2,id3
 #
 GOOGLE_CLIENT_ID=google_project_id
 GOOGLE_SERVICE_ACCOUNT_ID=google_service_account_id
