add missing env example files

--- a/backend/packages/Upgrade/.env.docker.local.example
+++ b/backend/packages/Upgrade/.env.docker.local.example
@@ -72,6 +72,15 @@ EMAIL_EXPIRE_AFTER_SECONDS=36000
 EMAIL_BUCKET="s3_bucket"
 
 #
+# Mooclets
+#
+
+MOOCLETS_ENABLED = true
+MOOCLETS_HOST_URL = mooclet_host_url
+MOOCLETS_API_ROUTE = /engine/api/v1
+MOOCLETS_API_TOKEN = some_token
+
+#
 # Initialization
 #
 ADMIN_USERS=user@email:admin/\user2@email:admin
