--- a/backend/packages/Upgrade/.env.example
+++ b/backend/packages/Upgrade/.env.example
@@ -74,7 +74,7 @@ EMAIL_BUCKET="s3_bucket"
 # Mooclets
 #
 
-MOOCLETS_ENABLED = true
+MOOCLETS_ENABLED = true/false
 MOOCLETS_HOST_URL = mooclet_host_url
 MOOCLETS_API_ROUTE = /engine/api/v1
 MOOCLETS_API_TOKEN = some_token
