add a quicktest like Main.java

--- a/clientlibs/js/package.json
+++ b/clientlibs/js/package.json
@@ -21,7 +21,8 @@
     "prettier:check": "prettier --config ../../.prettierrc './{src, test}/**/*.ts' --check",
     "docs:markdown": "typedoc --options typedoc.json",
     "test": "jest",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "quicktest": "ts-node quickTest.ts"
   },
   "keywords": [],
   "author": "",
