--- a/cloudformation/backend/app-infrastructure.yml
+++ b/cloudformation/backend/app-infrastructure.yml
@@ -191,7 +191,7 @@ Resources:
             - Name: USE_NEW_RELIC
               Value: '{{resolve:ssm:UPGRADE_USE_NEW_RELIC}}'  
             - Name: IS_ECS
-              Value: '{{resolve:ssm:UPGRADE_IS_ECS}}'
+              Value: 'true'
             - Name: CONTEXT_METADATA
               Value: '{{resolve:ssm:UPGRADE_CONTEXT_METADATA}}'
             - Name: METRICS
