--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,9 +48,11 @@
     "@angular/platform-browser-dynamic": "^17.1.2",
     "@angular/router": "^17.1.2",
     "@danielmoncada/angular-datetime-picker": "^17.0.0",
+    "@ngrx/component-store": "^18.0.2",
     "@ngrx/effects": "^17.1.0",
     "@ngrx/entity": "^17.1.0",
     "@ngrx/router-store": "^17.1.0",
+    "@ngrx/signals": "^18.0.2",
     "@ngrx/store": "^17.1.0",
     "@ngrx/store-devtools": "^17.1.0",
     "@ngx-translate/core": "^15.0.0",
@@ -69,6 +71,7 @@
     "lodash.isequal": "^4.5.0",
     "ngx-skeleton-loader": "^9.0.0",
     "rxjs": "7.8.1",
+    "signals": "^1.0.0",
     "tslib": "^2.6.2",
     "uuid": "^9.0.1",
     "zone.js": "^0.14.3"
@@ -101,12 +104,12 @@
     "jest-environment-jsdom": "^29.5.0",
     "jest-preset-angular": "^13.1.4",
     "npm-run-all": "^4.1.5",
+    "replace-in-file": "^6.1.0",
     "rimraf": "^3.0.2",
     "standard-version": "^9.5.0",
     "ts-jest": "^29.0.8",
     "ts-node": "~10.8.0",
     "typescript": "~5.3.3",
-    "webpack-bundle-analyzer": "^4.6.1",
-    "replace-in-file": "^6.1.0"
+    "webpack-bundle-analyzer": "^4.6.1"
   }
 }
