--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,6 +59,8 @@
     "ang-jsoneditor": "^3.1.1",
     "angular2-notifications": "^16.0.1",
     "ansi-to-html": "^0.7.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "dayjs": "^1.11.2",
     "jsoneditor": "^9.10.2",
     "jszip": "^3.10.1",
@@ -68,6 +70,7 @@
     "lodash.groupby": "^4.6.0",
     "lodash.isequal": "^4.5.0",
     "ngx-skeleton-loader": "^9.0.0",
+    "reflect-metadata": "^0.2.2",
     "rxjs": "7.8.1",
     "tslib": "^2.6.2",
     "uuid": "^9.0.1",
@@ -101,12 +104,12 @@
     "jest-environment-jsdom": "^29.5.0",
     "jest-preset-angular": "^13.1.4",
     "npm-run-all": "^4.1.5",
+    "replace-in-file": "^6.1.0",
     "rimraf": "^3.0.2",
     "standard-version": "^9.5.0",
     "ts-jest": "^29.0.8",
     "ts-node": "~10.8.0",
     "typescript": "~5.3.3",
-    "webpack-bundle-analyzer": "^4.6.1",
-    "replace-in-file": "^6.1.0"
+    "webpack-bundle-analyzer": "^4.6.1"
   }
 }
