--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ab_testing_backend",
-  "version": "6.0.0-prerelease.3",
+  "version": "6.0.1-DEBUG-DEBUG",
   "description": "Backend for A/B Testing Project",
   "scripts": {
     "install:all": "npm ci && cd packages/Scheduler && npm ci && cd ../Upgrade && npm ci",
