--- a/clientlibs/js/package.json
+++ b/clientlibs/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "upgrade_client_lib",
-  "version": "6.0.0-prerelease.3",
+  "version": "6.0.1-DEBUG-DEBUG",
   "description": "Client library to communicate with the Upgrade server",
   "files": [
     "dist/*"
