--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ab-testing",
-  "version": "6.0.0-prerelease.3",
+  "version": "6.0.1-DEBUG-DEBUG",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
