--- a/backend/packages/Upgrade/package.json
+++ b/backend/packages/Upgrade/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ab_testing_backend",
-  "version": "6.0.0-prerelease.3",
+  "version": "6.0.5",
   "description": "Backend for A/B Testing Project",
   "main": "index.js",
   "scripts": {
