--- a/backend/packages/Scheduler/tsconfig.json
+++ b/backend/packages/Scheduler/tsconfig.json
@@ -3,7 +3,7 @@
     "lib": ["es2017", "dom"],
     "removeComments": true,
     "moduleResolution": "node",
-    "noUnusedLocals": true,
+    // "noUnusedLocals": true,
     "noUnusedParameters": true,
     "sourceMap": true,
     "target": "es2017",
