--- a/backend/packages/Upgrade/package.json
+++ b/backend/packages/Upgrade/package.json
@@ -71,6 +71,7 @@
         "chalk": "^5.3.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
+        "compare-versions": "^6.1.1",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "csv-stringify": "^6.4.5",
