add similar build step in github builds

--- a/.github/actions/generic-npm-build/action.yml
+++ b/.github/actions/generic-npm-build/action.yml
@@ -31,12 +31,10 @@ runs:
         if [ -n "$INPUT_VERSION" ]; then
           npm version ${{ inputs.version }} --allow-same-version
         fi
-    - name: "[Frontend] Install Build Dependencies"
+    - name: "[Types] Install Dependencies"
       shell: bash
-      working-directory: frontend
-      run: |
-        cp -R ../types .
-        npm ci
+      working-directory: types
+      run: npm ci --no-audit
     - shell: bash
       working-directory: ${{ inputs.working_directory }}
       run: npm ci
