--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,6 +60,7 @@
     "angular2-notifications": "^16.0.1",
     "ansi-to-html": "^0.7.2",
     "dayjs": "^1.11.2",
+    "file-saver": "^2.0.5",
     "jsoneditor": "^9.10.2",
     "jszip": "^3.10.1",
     "jwt-decode": "^3.1.2",
@@ -88,6 +89,7 @@
     "@angular/cli": "^17.1.2",
     "@angular/compiler-cli": "^17.1.2",
     "@angular/language-service": "^17.1.2",
+    "@types/file-saver": "^2.0.7",
     "@types/google.accounts": "^0.0.6",
     "@types/jest": "^29.0.0",
     "@types/jwt-decode": "^3.1.0",
@@ -101,12 +103,12 @@
     "jest-environment-jsdom": "^29.5.0",
     "jest-preset-angular": "^13.1.4",
     "npm-run-all": "^4.1.5",
+    "replace-in-file": "^6.1.0",
     "rimraf": "^3.0.2",
     "standard-version": "^9.5.0",
     "ts-jest": "^29.0.8",
     "ts-node": "~10.8.0",
     "typescript": "~5.3.3",
-    "webpack-bundle-analyzer": "^4.6.1",
-    "replace-in-file": "^6.1.0"
+    "webpack-bundle-analyzer": "^4.6.1"
   }
 }
