--- a/backend/packages/Upgrade/package.json
+++ b/backend/packages/Upgrade/package.json
@@ -66,6 +66,7 @@
         "@nestjs/testing": "^10.3.0",
         "@nestjs/typeorm": "^10.0.2",
         "@types/supertest": "^6.0.2",
+        "archiver": "^7.0.1",
         "body-parser": "^1.20.1",
         "cache-manager": "^5.3.2",
         "chalk": "^5.3.0",
