test token service for local testing

--- a/backend/packages/Upgrade/.env.example
+++ b/backend/packages/Upgrade/.env.example
@@ -65,6 +65,8 @@ SCHEDULER_STEP_FUNCTION=arn_name
 AWS_REGION=aws-region
 HOST_URL=function_url
 TOKEN_SECRET_KEY=carnegielearning
+ALLOW_SERVICE_ACCOUNT_TOKEN_SERVICE=false
+GOOGLE_SERVICE_ACCOUNT_CREDENTIAL_FILE=path/to/credential.json
 
 #
 # Email
