--- a/backend/packages/Upgrade/.env.test
+++ b/backend/packages/Upgrade/.env.test
@@ -23,10 +23,10 @@ LOG_OUTPUT=dev
 # PostgreSQL DATABASE
 #
 TYPEORM_CONNECTION=postgres
-TYPEORM_HOST=localhost
+TYPEORM_HOST=postgres
 TYPEORM_HOSTNAME_REPLICAS=[]
 TYPEORM_PORT=5432
-TYPEORM_USERNAME=doswalt
+TYPEORM_USERNAME=postgres
 TYPEORM_PASSWORD=postgres
 TYPEORM_DATABASE=postgres
 TYPEORM_SYNCHRONIZE=false
