Feature/mooclet backend create delete experiment (#2075)
* initial commit to add mooclet proxy to backend and add create and assign mooclet functionality

* add missing env example files

* add missing type files

* add missing experiment file

* add missing migration file

* update types and migration file

* push migration file

* extend base experiment service for mooclet actions, mooclet ref entities, single transaction for creation sync

* updated mooclet entity models and cleaned up other logic

* fix models, add delete, experiment assignment updates

* clean up from review comments

* use proper object types

* user DTO update

* test

* remove assignment changes

* remove changes not needed for branch

* comment out stuff not ready

* remove unused validators

* fix the enums

* delete mooclet resources sync

* add mooclet resource rollback on create fail

* additional type updates

* tell gitignore how to ignore the right types file

* initial tests passing

* unit test completion for mooclet data service, some corrections to types

* fix version_json type to number

* refactored MoocletExperimentService to bring code complexity down before unit test writing

* import source change

* use validation with transformer for mooclet policy params

* reflect metadata

* spec tsconfig change

* try github action types move

* package lock updates

* fix up types things

* try tsconfig change for ci/cd

* try a new jenkins step to build types first

* try a new jenkins step to build types first, again

* try a new jenkins step to build types first, again, again

* try a new jenkins step to build types first, again, again, again

* unused import removed

* add similar build step in github builds

* jest config for types node_modules

* try moduleDirectories in jest config

* jest config fiddling

* fixed delete rollback issues, better error response

* remove debug

* Adding discriminator for ExperimentDTO

* Adding validation for property to be present

* moocletpo

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -10,6 +10,7 @@
     "alwaysStrict": false,
     "strictNullChecks": false,
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "downlevelIteration": true,
     "importHelpers": true,
     "allowSyntheticDefaultImports": true,
@@ -25,7 +26,8 @@
     ],
     "paths": {
       "upgrade_types": [
-        "../../types"
+        "../../types",
+        "./types"
       ]
     },
     "useDefineForClassFields": false
