--- a/.github/actions/generic-npm-build/action.yml
+++ b/.github/actions/generic-npm-build/action.yml
@@ -31,6 +31,10 @@ runs:
         if [ -n "$INPUT_VERSION" ]; then
           npm version ${{ inputs.version }} --allow-same-version
         fi
+    - name: "[Types] Install Dependencies"
+      shell: bash
+      working-directory: types
+      run: npm ci --no-audit
     - shell: bash
       working-directory: ${{ inputs.working_directory }}
       run: npm ci
