--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -21,6 +21,11 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "allowedCommonJsDependencies": [
+              "validator",
+              "lodash",
+              "reflect-metadata"
+            ],
             "outputPath": {
               "base": "dist/upgrade"
             },
@@ -33,7 +38,9 @@
               "projects/upgrade/src/favicon.ico",
               "projects/upgrade/src/assets"
             ],
-            "styles": ["projects/upgrade/src/styles.scss"],
+            "styles": [
+              "projects/upgrade/src/styles.scss"
+            ],
             "scripts": [],
             "extractLicenses": false,
             "sourceMap": true,
