--- a/backend/packages/Upgrade/.env.docker.local.example
+++ b/backend/packages/Upgrade/.env.docker.local.example
@@ -78,7 +78,7 @@ EMAIL_BUCKET="s3_bucket"
 # Mooclets
 #
 
-MOOCLETS_ENABLED = true/false
+MOOCLETS_ENABLED = false
 MOOCLETS_HOST_URL = mooclet_host_url
 MOOCLETS_API_ROUTE = /engine/api/v1
 MOOCLETS_API_TOKEN = some_token
