⬆️ Updating node version (#2229)
* ⬆️ Updating node version

* Fixing docker image

* Adding fixes from review comments

* Excluding node_modules folder from the folder binding

---------

Co-authored-by: Vivek Fitkariwala <vivekfitkariwala@Viveks-MacBook-Pro.local>

--- a/singleContainerApp-docker-compose.yml
+++ b/singleContainerApp-docker-compose.yml
@@ -12,6 +12,7 @@ services:
     volumes:
       - ./frontend:/usr/src/app/frontend
       - ./backend:/usr/src/app/backend
+      - frontend-node_modules:/usr/src/app/frontend/node_modules
     networks:
       - localdev
     ports:
@@ -35,6 +36,7 @@ services:
   
 volumes:
   upgradedbdata:
+  frontend-node_modules:
 
 networks:
   localdev:
