--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -38,7 +38,7 @@ yarn.lock
 npm-debug.log
 testem.log
 /typings
-/projects/upgrade/src/environments/environment.ts
+/projects/upgrade/src/environments/environment.local.ts
 
 # e2e
 /e2e/src/*.js
