--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -169,11 +169,51 @@
                 }
               ]
             },
-            "dev": {
+            "develop": {
               "fileReplacements": [
                 {
                   "replace": "projects/upgrade/src/environments/environment.ts",
-                  "with": "projects/upgrade/src/environments/environment.local.ts"
+                  "with": "projects/upgrade/src/environments/environment.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "budgets": [
+                {
+                  "type": "bundle",
+                  "name": "polyfills",
+                  "baseline": "150kb",
+                  "maximumWarning": "50kb",
+                  "maximumError": "100kb"
+                },
+                {
+                  "type": "bundle",
+                  "name": "styles",
+                  "baseline": "1mb",
+                  "maximumWarning": "2mb",
+                  "maximumError": "100kb"
+                },
+                {
+                  "type": "bundle",
+                  "name": "main",
+                  "baseline": "2mb",
+                  "maximumWarning": "3mb",
+                  "maximumError": "200kb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ]
+            },
+            "local": {
+              "fileReplacements": [
+                {
+                  "replace": "projects/upgrade/src/environments/environment.local.ts",
+                  "with": "projects/upgrade/src/environments/environment.ts"
                 }
               ],
               "optimization": true,
@@ -350,8 +390,8 @@
             "beanstalk": {
               "buildTarget": "upgrade:build:beanstalk"
             },
-            "dev": {
-              "buildTarget": "upgrade:build:dev"
+            "local": {
+              "buildTarget": "upgrade:build:local"
             }
           }
         },
