--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "dev": "ng serve --open --configuration=dev",
+    "dev": "ng serve --open --configuration=local",
     "start": "ng serve --open",
     "docker:local": "ng serve --open --host 0.0.0.0",
     "cl:build": "npm run build:prod && npm run cl:copy-package-json",
