--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "dev": "ng serve --open --configuration=local",
-    "start": "ng serve --open",
+    "start": "ng serve --open --configuration=local",
     "docker:local": "ng serve --open --host 0.0.0.0",
     "cl:build": "npm run build:prod && npm run cl:copy-package-json",
     "cl:copy-package-json": "cp projects/upgrade/package.json dist/upgrade/",
