--- a/clientlibs/java/pom.xml
+++ b/clientlibs/java/pom.xml
@@ -53,6 +53,11 @@
 			<artifactId>jersey-hk2</artifactId>
 			<version>2.30.1</version>
 		</dependency>
+		<dependency>
+            <groupId>org.glassfish.jersey.connectors</groupId>
+            <artifactId>jersey-apache-connector</artifactId>
+            <version>2.30.1</version>
+        </dependency>
 
 		<!-- https://mvnrepository.com/artifact/io.vavr/vavr -->
 		<dependency>
