--- a/clientlibs/java/pom.xml
+++ b/clientlibs/java/pom.xml
@@ -9,7 +9,7 @@
 		at the same time that happen to rev to the same new version will be caught 
 		by a merge conflict. -->
 
-	<version>6.1.0</version>
+	<version>6.1.1</version> <!-- 6.1.1: switch to jersey-apache-connector -->  
 	<build>
 		<plugins>
 			<plugin>
@@ -20,10 +20,9 @@
 		</plugins>
 	</build>
 	<properties>
-		<jersey.version>2.16</jersey.version>
+		<jersey.version>2.30.1</jersey.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.release>17</maven.compiler.release>
 	</properties>
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
@@ -53,6 +52,11 @@
 			<artifactId>jersey-hk2</artifactId>
 			<version>2.30.1</version>
 		</dependency>
+		<dependency>
+            <groupId>org.glassfish.jersey.connectors</groupId>
+            <artifactId>jersey-apache-connector</artifactId>
+            <version>2.30.1</version>
+        </dependency>
 
 		<!-- https://mvnrepository.com/artifact/io.vavr/vavr -->
 		<dependency>
