Re-add disabling auth check in local

--- a/backend/packages/Upgrade/.env.test
+++ b/backend/packages/Upgrade/.env.test
@@ -75,6 +75,9 @@ SCHEDULER_STEP_FUNCTION=arn:aws:states:us-east-1:781188149671:stateMachine:devel
 AWS_REGION=<anyAWSregion>
 HOST_URL = https://upgrade-dev-backend.edoptimize.com/api
 TOKEN_SECRET_KEY = <replaceme>
+GOOGLE_AUTH_TOKEN_REQUIRED=false
+ALLOW_SERVICE_ACCOUNT_TOKEN_SERVICE=false
+GOOGLE_SERVICE_ACCOUNT_CREDENTIAL_FILE=path/to/credential.json
 
 #
 # Email
