Re-add disabling auth check in local (#2495)
* Re-add disabling auth check in local

* Update app-infrastructure.yml to set GOOGLE_AUTH_TOKEN_REQUIRED to true

* Update GOOGLE_AUTH_TOKEN_REQUIRED to default to true and remove ternary

* Add startup logging for Google user authorization status

--- a/backend/packages/Upgrade/.env.example
+++ b/backend/packages/Upgrade/.env.example
@@ -67,6 +67,7 @@ SCHEDULER_STEP_FUNCTION=arn_name
 AWS_REGION=aws-region
 HOST_URL=function_url
 TOKEN_SECRET_KEY=carnegielearning
+GOOGLE_AUTH_TOKEN_REQUIRED=true
 ALLOW_SERVICE_ACCOUNT_TOKEN_SERVICE=false
 GOOGLE_SERVICE_ACCOUNT_CREDENTIAL_FILE=path/to/credential.json
 
