--- a/cloudformation/backend/app-infrastructure.yml
+++ b/cloudformation/backend/app-infrastructure.yml
@@ -208,6 +208,12 @@ Resources:
               Value: '{{resolve:ssm:UPGRADE_METRICS}}'
             - Name: MIDDLEWARES
               Value: '{{resolve:ssm:UPGRADE_MIDDLEWARES}}'
+            - Name: MOOCLETS_ENABLED
+              Value: '{{resolve:ssm:UPGRADE_MOOLETS_ENABLED}}'
+            - Name: MOOCLETS_HOST_URL
+              Value: '{{resolve:ssm:UPGRADE_MOOLETS_HOSTURL}}'
+            - Name: MOOCLETS_API_ROUTE
+              Value: '{{resolve:ssm:UPGRADE_MOOLETS_API_ROUTE}}'
           Secrets:
             - Name: NEW_RELIC_LICENSE_KEY
               ValueFrom: !Sub arn:aws:ssm:us-east-1:${AWS::AccountId}:parameter/NEW_RELIC_LICENSE_KEY
@@ -229,6 +235,8 @@ Resources:
               ValueFrom: !Sub arn:aws:ssm:us-east-1:${AWS::AccountId}:parameter/UPGRADE_SWAGGER_USERNAME
             - Name: TOKEN_SECRET_KEY
               ValueFrom: !Sub arn:aws:ssm:us-east-1:${AWS::AccountId}:parameter/UPGRADE_TOKEN_SECRET_KEY
+            - Name: MOOCLETS_API_TOKEN
+              ValueFrom: !Sub arn:aws:ssm:us-east-1:${AWS::AccountId}:parameter/MOOCLETS_API_TOKEN
           LogConfiguration:
             LogDriver: awsfirelens
           MemoryReservation: 256
