test frontend CI

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "cl:build": "npm run build:prod && npm run cl:copy-package-json",
     "cl:copy-package-json": "cp projects/upgrade/package.json dist/upgrade/",
     "start:prod": "npm run build:prod && npm run server",
-    "prebuild": "npm run test",
+    "prebuild": "npm run test && npm run typecheck && npm run lint",
     "build": "ng build",
     "prebuild:prod": "npm run test",
     "prebuild:project": "node set_build_variables.js",
@@ -20,6 +20,7 @@
     "lint": "eslint -c ../.eslintrc.js --ext .ts './projects/upgrade/src' && npm run prettier:check",
     "lint:fix": "eslint -c ../.eslintrc.js --ext .ts './projects/upgrade/src' && npm run prettier:write",
     "test": "jest --runInBand",
+    "typecheck": "tsc --noEmit",
     "test:coverage": "open ./coverage/lcov-report/index.html",
     "test:once": "jest --maxWorkers=50% --coverage",
     "test:watch": " jest --maxWorkers=25% --watchAll --coverage",
