--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "cl:build": "npm run build:prod && npm run cl:copy-package-json",
     "cl:copy-package-json": "cp projects/upgrade/package.json dist/upgrade/",
     "start:prod": "npm run build:prod && npm run server",
-    "prebuild": "npm run test && npm run typecheck && npm run lint",
+    "prebuild": "npm run test && npm run typecheck",
     "build": "ng build",
     "prebuild:prod": "npm run test",
     "prebuild:project": "node set_build_variables.js",
