--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "prettier": "^2.7.1"
   },
   "scripts": {
-    "prepare": "is-ci || husky install"
+    "prepare": "is-ci || husky install",
+    "lint": "eslint -c .eslintrc.js --ext .ts './{frontend,backend,types,clientlibs}/**/*.ts'",
+    "prettier:write": "prettier --config .prettierrc './{frontend,backend,types,clientlibs}/**/*.{ts,js,html,json,scss}' --write",
+    "prettier:check": "prettier --config .prettierrc './{frontend,backend,types,clientlibs}/**/*.{ts,js,html,json,scss}' --check"
   },
   "lint-staged": {
     "./frontend/projects/upgrade/src/**/*.{ts,js,html,json,scss}": [
