--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,11 @@
     "description": "Backend for A/B Testing Project",
     "scripts": {
         "install:all": "npm ci && cd packages/Scheduler && npm ci && cd ../Upgrade && npm ci",
+        "install:upgrade": "npm ci --no-audit &&  cd packages/Upgrade && npm ci --no-audit",
         "production:upgrade": "cd packages/Upgrade && npm run production",
         "build:upgrade": "cd packages/Upgrade && npm run build",
         "test:upgrade": "cd packages/Upgrade && npm run test",
+        "test:upgrade-unit": "cd packages/Upgrade && npm run test:unit",
         "dockerConfig": "ts-node --transpile-only ./commands/dockerrun.ts",
         "deploy:schedule": "cd packages/Scheduler && npm run deploy"
     },
