--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,18 +16,10 @@
     "skipLibCheck": true,
     "module": "es2020",
     "target": "ES2022",
-    "typeRoots": [
-      "./node_modules/@types"
-    ],
-    "lib": [
-      "es2018",
-      "dom"
-    ],
+    "typeRoots": ["./node_modules/@types"],
+    "lib": ["es2018", "dom"],
     "paths": {
-      "upgrade_types": [
-        "../../types",
-        "./types"
-      ]
+      "upgrade_types": ["../../types", "./types"]
     },
     "useDefineForClassFields": false
   }
