--- a/clientlibs/java/pom.xml
+++ b/clientlibs/java/pom.xml
@@ -9,7 +9,7 @@
 		at the same time that happen to rev to the same new version will be caught 
 		by a merge conflict. -->
 
-	<version>7.0.0</version> <!-- 7.0.0 move Jaxb -> jakarta and update to Jersey 3-->
+	<version>6.2.0</version> <!-- 6.2.0 move Jaxb -> jakarta and update to Jersey 3-->
 	<build>
 		<plugins>
 			<plugin>
@@ -20,7 +20,7 @@
 		</plugins>
 	</build>
 	<properties>
-		<jersey.version>2.30.1</jersey.version>
+		<jersey.version>3.1.0</jersey.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.release>17</maven.compiler.release>
 	</properties>
@@ -50,18 +50,28 @@
 		<dependency>
 			<groupId>org.glassfish.jersey.media</groupId>
 			<artifactId>jersey-media-json-jackson</artifactId>
-			<version>2.30.1</version>
+			<version>${jersey.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.jersey.inject</groupId>
 			<artifactId>jersey-hk2</artifactId>
-			<version>2.30.1</version>
+			<version>${jersey.version}</version>
 		</dependency>
 		<dependency>
             <groupId>org.glassfish.jersey.connectors</groupId>
             <artifactId>jersey-apache-connector</artifactId>
-            <version>2.30.1</version>
+            <version>${jersey.version}</version>
         </dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.14</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+			<version>4.4.16</version>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/io.vavr/vavr -->
 		<dependency>
