--- a/clientlibs/java/pom.xml
+++ b/clientlibs/java/pom.xml
@@ -40,7 +40,7 @@
 		<dependency>
 			<groupId>org.glassfish.jersey.core</groupId>
 			<artifactId>jersey-client</artifactId>
-			<version>3.1.0</version>
+			<version>${jersey.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>jakarta.ws.rs</groupId>
